# Basic

./: CONTRIBUTING.md  LICENSE  Makefile  README.md  basic.opam  dune-project
src/: ast.ml  compiler.ml  compiler.mli  dune  errKind.ml  errKind.mli  eval.ml  eval.mli  lexer.mll  limitations.ml  limits.ml  limits.mli  parser.mly  parsingCtx.ml  preprocess.ml  preprocess.mli  utils.ml  value.ml  value.mli
test/: dune  main.ml
