(lang dune 2.9.1)
(name basic)
(implicit_transitive_deps false)

(generate_opam_files true)
(source (github basic/basic))
(maintainers "Tim-ats-d <tim.arnouts@protonmail.com>")
(authors "Tim-ats-d <tim.arnouts@protonmail.com>")

(package
 (name basic)
 (synopsis "")
 (description "\

")
 (documentation https://basic.github.io/basic/)
 (depends alcotest fmt logs))
